--- a/Flask/flaskr/templates/login.html
+++ b/Flask/flaskr/templates/login.html
@@ -1,7 +1,8 @@
+<!-- This is where the Google map will appear -->
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+  <h1>{% block title %}Log In to KentEvent{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
