--- a/Flask/flaskr/templates/register.html
+++ b/Flask/flaskr/templates/register.html
@@ -1,16 +1,29 @@
-<!-- This is where the Google map will appear -->
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Registration Page</title>
+    <h1>KentEvent</h1>
+    <h2>A product by Flimsyware</h2>
+</head>
 
-{% block header %}
-  <h1>{% block title %}Register for KentEvent{% endblock %}</h1>
-{% endblock %}
+<body>
+    <h3>KentEvent is a web application that allows students to few events happening in the surrounding area. It was developed by 14 students in Dr.Delozier's Software Engineering class.</h3>
+</body>
 
-{% block content %}
-  <form method="post">
+<form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" required>
     <input type="submit" value="Register">
-  </form>
-{% endblock %}
+    <label for="user">User</label>
+    <input type="radio" name="usertype" id="user" value="user" checked="checked" />
+    <label for="host">Host</label>
+    <input type="radio" name="usertype" id="host" value="host" />
+    
+    
+</form>
+
+</html> 
