got the links to work

--- a/Flask/flaskr/templates/landing.html
+++ b/Flask/flaskr/templates/landing.html
@@ -1,1 +1,10 @@
-<!-- This is where the Google map will appear -->
+<!-- First thing the user sees-->
+{% extends 'base.html' %}
+{% block header %}
+  <h1>{% block title %}KentEvent{% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+  <img src= "https://cdn.discordapp.com/attachments/548520166611353602/563141120087949314/flynn.png">
+{% endblock %}
+
