--- a/Flask/flaskr/templates/login.html
+++ b/Flask/flaskr/templates/login.html
@@ -1,6 +1,8 @@
 <!-- This is where the Google map will appear -->
 {% extends 'base.html' %}
 
+<h1>Log In to KentEvent</h1>
+
 {% block header %}
   <h1>{% block title %}Log In to KentEvent{% endblock %}</h1>
 {% endblock %}
