--- a/Flask/flaskr/templates/base.html
+++ b/Flask/flaskr/templates/base.html
@@ -1,23 +1,23 @@
 <!doctype html>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">KentEvent</a>
+  <h1>Kent Event</h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="landing.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="/login">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="register.html">Register</a>
+        <a class="nav-link" href="/register">Register</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="events.html">KentEvent</a>
+        <a class="nav-link" href="/events">KentEvent</a>
       </li>
     </ul>
   </div>
