adding page content

--- a/Flask/flaskr/templates/events.html
+++ b/Flask/flaskr/templates/events.html
@@ -1,6 +1,8 @@
 <!-- This is where the Google map will appear -->
 {% extends "bootstrap/base.html" %}
 
+<!-- Issue if you try to implement the nav bar -->
+
 <!-- Setup doc -->
 {% block html_attribs %} lang="en" class="h-100" {% endblock %}
 
